--- a/index.html
+++ b/index.html
@@ -131,17 +131,17 @@
 
     <section>
         <div class='estoque-prata-index'>
-            <a href="prata/colar-coracao-colorido.html">
+            <a href="prata/anel-dois-em-um.html">
                 <div class='item-prata'>
-                    <img src="./imgs/colar coração colorido (1).jpeg" alt="">
+                    <img src="./imgs/anel-dois-em-um.webp" alt="">
                     <div class="text-prata">
                         <p class='novidade-loja'>Novo</p>
-                        <h1 class="nome-prata">Colar Coração Colorido</h1>
+                        <h1 class="nome-prata">Anel Dois em Um</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
                         </div>
                         <div class="promocao">
-                            <p class="preço-loja">R$ 80,00</p>
+                            <p class="preço-loja">R$ 90,00</p>
                             <p class="opcoesdepaga">Pague à vista ou Pix</p>
                         </div>
                         <div class="botaocomprarprata">
@@ -176,17 +176,17 @@
 
 
         <div class='estoque-prata-index-pc'>
-            <a href="prata/colar-coracao-colorido.html">
+            <a href="prata/anel-dois-em-um.html">
                 <div class='item-prata'>
-                    <img src="./imgs/colar coração colorido (1).jpeg" alt="">
+                    <img src="./imgs/anel-dois-em-um.webp" alt="">
                     <div class="text-prata">
                         <p class='novidade-loja'>Novo</p>
-                        <h1 class="nome-prata">Colar Coração Colorido</h1>
+                        <h1 class="nome-prata">Anel Dois em Um</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
                         </div>
                         <div class="promocao">
-                            <p class="preço-loja">R$ 80,00</p>
+                            <p class="preço-loja">R$ 90,00</p>
                             <p class="opcoesdepaga">Pague à vista ou Pix</p>
                         </div>
                         <div class="botaocomprarprata">
@@ -469,7 +469,7 @@
             <div class='item-prata'>
                 <img src="./imgs/colar-ponto-de-luz-pink.webp" alt="">
                 <div class="text-prata">
-                    <p class='novidade-loja'>Novo</p>
+                    <p class='esgotado-loja'>ESGOTADO</p>
                     <h1 class="nome-prata">Colar Ponto de Luz Pink</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
@@ -514,7 +514,7 @@
             <div class='item-prata'>
                 <img src="./imgs/colar-ponto-de-luz-pink.webp" alt="">
                 <div class="text-prata">
-                    <p class='novidade-loja'>Novo</p>
+                    <p class='esgotado-loja'>ESGOTADO</p>
                     <h1 class="nome-prata">Colar Ponto de Luz Pink</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
