--- a/novidades.html
+++ b/novidades.html
@@ -176,7 +176,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/colar-ponto-de-luz-pink.webp" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='esgotado-loja'>ESGOTADO</p>
                         <h1 class="nome-prata">Colar Ponto de Luz Pink</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
@@ -336,7 +336,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/colar coração colorido (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='esgotado-loja'>ESGOTADO</p>
                         <h1 class="nome-prata">Colar Coração Colorido</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
@@ -356,7 +356,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/colar veneziana (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='esgotado-loja'>ESGOTADO</p>
                         <h1 class="nome-prata">Colar Veneziana</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
