--- a/pratas-colares.html
+++ b/pratas-colares.html
@@ -229,12 +229,13 @@
         </section>
 
         <div class='estoque-prata'>
-            <a href="prata/colar-ponto-de-luz-pink.html">
+
+            <a href="prata/colar-coracao-colorido.html">
                 <div class='item-prata'>
-                    <img src="./imgs/colar-ponto-de-luz-pink.webp" alt="">
+                    <img src="./imgs/colar coração colorido (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
-                        <h1 class="nome-prata">Colar Ponto de Luz Pink</h1>
+                        <p class='esgotado-loja'>ESGOTADO</p>
+                        <h1 class="nome-prata">Colar Coração Colorido</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
                         </div>
@@ -249,12 +250,12 @@
                     </div>
                 </div>
             </a>
-            <a href="prata/colar-coracao-colorido.html">
+            <a href="prata/colar-ponto-de-luz-pink.html">
                 <div class='item-prata'>
-                    <img src="./imgs/colar coração colorido (1).jpeg" alt="">
+                    <img src="./imgs/colar-ponto-de-luz-pink.webp" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
-                        <h1 class="nome-prata">Colar Coração Colorido</h1>
+                        <p class='esgotado-loja'>ESGOTADO</p>
+                        <h1 class="nome-prata">Colar Ponto de Luz Pink</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
                         </div>
@@ -273,7 +274,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/colar veneziana (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='esgotado-loja'>ESGOTADO</p>
                         <h1 class="nome-prata">Colar Veneziana</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
