--- a/admin/fornecedores.html
+++ b/admin/fornecedores.html
@@ -35,7 +35,7 @@
             <div class="openmenumobile" onclick="abrirmenumobile()">
                 <i class="fa-solid fa-bars"></i>
             </div>
-            <h1>Conta</h1>
+            <h1>Fornecedores</h1>
             <div class="profile">
                 <i class="fa-regular fa-bell" onclick="notificacaoopen()"></i>
 
@@ -76,27 +76,7 @@
             </div>
         </div>
         <div class="content-page">
-            <div class="blocks-contents">
-                <div class='form-profile'>
-                    <div>
-                    <img src="../imgs/Logo.webp" alt="">
-                    <img class="fotoperfilprofile" src="img/usuario-sem-foto.png" alt="">
-                </div>
-                    <div class="form-profile-items">
-                        <div class="titleprofile">
-                            <h1 class="nameuser">Nome</h1>
-                            <p class="user">user</p>
-                        </div>
-                        <div class="infogeralperfil">
-                            <h1>Informações Gerais</h1>
-                            <p class="nomecompleto">Nome completo: </p>
-                            <p class="cpf">CPF: não cadastrado</p>
-                            <p class="funcao">Função: </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            
+                        
         </div>
     </div>
 </body>
