--- a/admin/fornecedores.html
+++ b/admin/fornecedores.html
@@ -76,11 +76,49 @@
             </div>
         </div>
         <div class="content-page">
-                        
+            <div class="fornecedoresblock">
+                <h1 class="titlefor">Principais fornecedores</h1>
+                <div class="fornecedoreslist">
+                    <div class="fornecedor">
+                        <div class="flexfornecedor">
+                            <div>
+                                <img src="http://d3ugyf2ht6aenh.cloudfront.net/stores/002/289/530/themes/common/logo-1300451119-1658325553-8236ebeadb95411f6d5a1629dcd5e0701658325554.jpg?0" alt="">
+                            </div>
+                            <div>
+                                <h1>Cy Semijóias</h1>
+                                <p>(55) 11 99710-7008</p>
+                            </div>
+                        </div>
+                        <button class="buttonopenframe" onclick="opency()">ABRIR FRAME</button>
+                        <iframe class="cyabrir" src="https://app.conectavenda.com.br/91fd8209815b8f86427520a32c28a053" frameborder="0"></iframe>
+                    </div>
+                    <div class="fornecedor">
+                        <div class="flexfornecedor">
+                            <div>
+                                <img src="https://conecta-vendas.s3.amazonaws.com/illuminati_comercio_de_semijoias/1651842311.6949-WhatsAppImage2022-05-05at13.05.51.jpeg" alt="">
+                            </div>
+                            <div>
+                                <h1>Luminati Pratas</h1>
+                                <p>@luminatipratas</p>
+                            </div>
+                        </div>
+                        <button  class="buttonopenframe" onclick="openluminati()">ABRIR FRAME</button>
+                        <iframe class="lumiabrir" src="https://app.conectavenda.com.br/349c32a2e0b13b4a4629ba91567e110e" frameborder="0"></iframe>
+                    </div>
+                    <div class="fornecedoradd" onclick="alert('Em breve')">
+                        <div class="flexfornecedor">
+                            <div>
+                                <h1>ADICIONAR</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> 
         </div>
     </div>
 </body>
     <script src="script.js"></script>
     <script src="leftsidebar.js"></script>
     <script src="notifications.js"></script>
+    <script src="js.js"></script>
 </html>
