--- a/admin/index.html
+++ b/admin/index.html
@@ -128,7 +128,7 @@
                     </div>
 
                     <div class="blocks-contents-fornecedores">
-                        <a href="https://cysemijoias.com.br/" target="_blank">
+                        <a href="https://app.conectavenda.com.br/91fd8209815b8f86427520a32c28a053" target="_blank">
                             <div class="blockfornecedores">
                                 <div class="blockfornecedores-leftside">
                                     <img src="http://d3ugyf2ht6aenh.cloudfront.net/stores/002/289/530/themes/common/logo-1300451119-1658325553-8236ebeadb95411f6d5a1629dcd5e0701658325554.jpg?0" alt="">
