--- a/pedidos/958.html
+++ b/pedidos/958.html
@@ -26,7 +26,7 @@
         <p>NÚMERO DO PEDIDO: #958</p>
         <p>PROTOCOLO DE AUTORIZAÇÃO: 457649204000475</p>
         <p>PEDIDO REALIZADO PESSOALMENTE </p>
-        <p>LINK PARA VISUALIZAÇÃO DA NOTA FISCAL DO PEDIDO: <a href="HTTPS://LARIS-ACESSORIOS.NETLIFY.APP/pedidos/935.html">HTTPS://LARIS-ACESSOÓRIOS.NETLIFY.APP/PEDIDOS/935.html</a></p>
+        <p>LINK PARA VISUALIZAÇÃO DA NOTA FISCAL DO PEDIDO: <a href="HTTPS://LARIS-ACESSORIOS.NETLIFY.APP/pedidos/958.html">HTTPS://LARIS-ACESSOÓRIOS.NETLIFY.APP/PEDIDOS/958</a></p>
         <p>NOTA FISCAL EMITIDA E REVISADA(RESPECTIVAMENTE): VINÍCIUS DA SILVA SANTOS E LARISSA ALVES DE ANDRADE MOREIRA</p>
         <p></p>
         <h3>INFORMAÇÕES DO PEDIDO</h3>
@@ -50,7 +50,7 @@
             <tr>
                 <th></th>
                 <th></th>
-                <th>TOTAL: R$30,00</th>
+                <th>TOTAL: R$35,00</th>
             </tr>
         </table>
         <h3>FORMA DE PAGAMENTO</h3>
