--- a/pedidos/958.html
+++ b/pedidos/958.html
@@ -19,15 +19,14 @@
 <body>
 
     <div class="pedido">
-        <h1>PEDIDO 958 - NOTA FISCAL ELETRÔNICA LARI'S ACESSÓRIOS</h1>
-        <p>NOTA FISCAL ELETRÔNICA EMITIDA</p>
-        <p>DATA DA EMISSÃO DA NOTA FISCAL: 05/06/2023 AS 23:00</p>
+        <h1>COMPROVANTE DE VENDA - PEDIDO #958</h1>
+        <p>COMPROVANTE DE VENDA DA LOJA LARI'S ACESSÓRIOS</p>
+        <p>DATA DA EMISSÃO DO COMPROVANTE: 05/06/2023 AS 23:00</p>
         <p>CONSUMIDOR: ANA LUISA OZANAN</p>
         <p>NÚMERO DO PEDIDO: #958</p>
-        <p>PROTOCOLO DE AUTORIZAÇÃO: 457649204000475</p>
         <p>PEDIDO REALIZADO PESSOALMENTE </p>
-        <p>LINK PARA VISUALIZAÇÃO DA NOTA FISCAL DO PEDIDO: <a href="HTTPS://LARIS-ACESSORIOS.NETLIFY.APP/pedidos/958.html">HTTPS://LARIS-ACESSOÓRIOS.NETLIFY.APP/PEDIDOS/958</a></p>
-        <p>NOTA FISCAL EMITIDA E REVISADA(RESPECTIVAMENTE): VINÍCIUS DA SILVA SANTOS E LARISSA ALVES DE ANDRADE MOREIRA</p>
+        <p>LINK PARA VISUALIZAÇÃO DO COMPROVANTE DO PEDIDO: <a href="HTTPS://LARIS-ACESSORIOS.NETLIFY.APP/pedidos/958.html">HTTPS://LARIS-ACESSOÓRIOS.NETLIFY.APP/PEDIDOS/958</a></p>
+        <p>COMPROVANTE FEITO E REVISADO(RESPECTIVAMENTE) POR: VINÍCIUS DA SILVA SANTOS E LARISSA ALVES DE ANDRADE MOREIRA</p>
         <p></p>
         <h3>INFORMAÇÕES DO PEDIDO</h3>
         <table>
