--- a/pedidos/958.html
+++ b/pedidos/958.html
@@ -18,6 +18,10 @@
 </head>
 <body>
 
+    <div class="img">
+        <img src="../imgs/logolaris.png" alt="">
+    </div>
+
     <div class="pedido">
         <h1>COMPROVANTE DE VENDA - PEDIDO #958</h1>
         <p>COMPROVANTE DE VENDA DA LOJA LARI'S ACESSÓRIOS</p>
