--- a/admin/index.html
+++ b/admin/index.html
@@ -225,7 +225,7 @@
 </body>
 <script src="js.js"></script>
     <script>
-        document.querySelector('.lucrototalnumber').innerHTML = localStorage.getItem('entradas') - localStorage.getItem('saidas')
+        document.querySelector('.lucrototalnumber').innerHTML = 'R$ ' + (localStorage.getItem('entradas') - localStorage.getItem('saidas'))
     </script>
     <script src="leftsidebar.js"></script>
     <script src="script.js"></script>
