--- a/admin/fornecedores.html
+++ b/admin/fornecedores.html
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div class='menu-profile-change'>
-            <div class="userprofileshow" onclick="window.location.href = 'account.html'">
+            <div class="userprofileshow" onclick="window.location.href = 'settings.html'">
                 <div class="account-show">
                     <img src="img/usuario-sem-foto.png" alt="">
                     <div class="infoaccount">
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="userbuttonsprofile">
-                <div class="button-profile" onclick="window.location.href = 'account.html'">
+                <div class="button-profile" onclick="window.location.href = 'settings.html'">
                     <label>AJUSTES</label>
                 </div>
                 <div class="button-profile" onclick="sairdoprofile()">
