--- a/admin/planilhaitems.html
+++ b/admin/planilhaitems.html
@@ -36,7 +36,7 @@
             <div class="openmenumobile" onclick="abrirmenumobile()">
               <i class="fa-solid fa-bars"></i>
           </div>
-            <h1>Planilha</h1>
+            <h1>Planilha Items</h1>
             <div class="profile">
                 <i class="fa-regular fa-bell" onclick="notificacaoopen()"></i>
                 <div class="profile-change" onclick="openmenuprofile()">
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div class='menu-profile-change'>
-            <div class="userprofileshow" onclick="window.location.href = 'account.html'">
+            <div class="userprofileshow" onclick="window.location.href = 'settings.html'">
                 <div class="account-show">
                     <img src="img/usuario-sem-foto.png" alt="">
                     <div class="infoaccount">
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="userbuttonsprofile">
-                <div class="button-profile" onclick="window.location.href = 'account.html'">
+                <div class="button-profile" onclick="window.location.href = 'settings.html'">
                     <label>AJUSTES</label>
                 </div>
                 <div class="button-profile" onclick="sairdoprofile()">
