--- a/admin/planilhas.html
+++ b/admin/planilhas.html
@@ -35,7 +35,7 @@
             <div class="openmenumobile" onclick="abrirmenumobile()">
                 <i class="fa-solid fa-bars"></i>
             </div>
-            <h1>Conta</h1>
+            <h1>Planilha</h1>
             <div class="profile">
                 <i class="fa-regular fa-bell" onclick="notificacaoopen()"></i>
 
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div class='menu-profile-change'>
-            <div class="userprofileshow" onclick="window.location.href = 'account.html'">
+            <div class="userprofileshow" onclick="window.location.href = 'settings.html'">
                 <div class="account-show">
                     <img src="img/usuario-sem-foto.png" alt="">
                     <div class="infoaccount">
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="userbuttonsprofile">
-                <div class="button-profile" onclick="window.location.href = 'account.html'">
+                <div class="button-profile" onclick="window.location.href = 'settings.html'">
                     <label>AJUSTES</label>
                 </div>
                 <div class="button-profile" onclick="sairdoprofile()">
@@ -76,31 +76,33 @@
             </div>
         </div>
         <div class="content-page">
-            <div class="blocks-contents">
-                <div class='form-profile'>
-                    <div>
-                    <img src="../imgs/Logo.webp" alt="">
-                    <img class="fotoperfilprofile" src="img/usuario-sem-foto.png" alt="">
+            <div class="titleplanilhas">
+                <h1>Selecione uma planilha</h1>
+                <p>Escolha uma opção de planilha</p>
+            </div>
+            <div class="planilhaslist">
+                <div class="planilhablock-a">
+                    <a href="planilhaitems.html">
+                        <div class="planilhablock">
+                            <h1><i class="fa-regular fa-gem"></i> Planilha de Items</h1>
+                            <p>Armazenamento de dados de items para compras</p>
+                        </div>
+                    </a>
                 </div>
-                    <div class="form-profile-items">
-                        <div class="titleprofile">
-                            <h1 class="nameuser">Nome</h1>
-                            <p class="user">user</p>
+                <div class="planilhablock-a">
+                    <a href="planilhaexpenses.html">
+                        <div class="planilhablock">
+                            <h1><i class="fa-solid fa-hand-holding-dollar"></i> Planilha de Despesas</h1>
+                            <p>Despesas e Receitas</p>
                         </div>
-                        <div class="infogeralperfil">
-                            <h1>Informações Gerais</h1>
-                            <p class="nomecompleto">Nome completo: </p>
-                            <p class="cpf">CPF: não cadastrado</p>
-                            <p class="funcao">Função: </p>
-                        </div>
-                    </div>
+                    </a>
                 </div>
             </div>
-            
         </div>
     </div>
 </body>
     <script src="script.js"></script>
     <script src="leftsidebar.js"></script>
     <script src="notifications.js"></script>
+    <script src="js.js"></script>
 </html>
