--- a/index.html
+++ b/index.html
@@ -415,17 +415,17 @@
                 </div>
             </div>
         </a>
-        <a href="cetim/touca-de-cetim-dupla-face-rosa-preta.html">
+        <a href="cetim/scrunchie-de-cetim-azul-claro.html">
             <div class='item-prata'>
-                <img src="./imgs/touca dupla face rosa e preta (1).jpeg" alt="">
+                <img src="./imgs/scrunchie-azul-claro (1).jpeg" alt="">
                 <div class="text-prata">
                     <p class='novidade-loja'>Novo</p>
-                    <h1 class="nome-prata">Touca de Cetim Dupla Face Rosa e Preta</h1>
+                    <h1 class="nome-prata">Scrunchie de Cetim Azul Claro</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
                     </div>
                     <div class="promocao">
-                        <p class="preço-loja">R$ 22,50</p>
+                        <p class="preço-loja">R$ 5,00</p>
                         <p class="opcoesdepaga">Pague à vista ou Pix</p>
                     </div>
                     <div class="botaocomprarprata">
@@ -434,7 +434,7 @@
                      
                 </div>
             </div>
-        </a>
+        </a> 
         <a href="prata/pulseira-veneziana.html">
             <div class='item-prata'>
                 <img src="./imgs/Pulseira Veneziana (2).jpeg" alt="">
