--- a/novidades.html
+++ b/novidades.html
@@ -456,7 +456,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/touca dupla face rosa e preta (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='esgotado-loja'>ESGOTADO</p>
                         <h1 class="nome-prata">Touca de Cetim Dupla Face Rosa e Preta</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
