--- a/prata/brinco-argola-zirconia-cristais.html
+++ b/prata/brinco-argola-zirconia-cristais.html
@@ -154,7 +154,7 @@
                     <div class='tamanhocenterleft'>
                         <h2 class="tamanhofrase">Selecione Tamanho: <select name="Tamanho" id="tamanho">
                             <option value="1.00mm Colorido" selected>1,00mm Colorido (R$ 45,00)</option>
-                            <option value="1.00mm Cristal" selected>1,00mm Cristal (R$ 45,00)</option>
+                            <option value="1.00mm Cristal" disabled>1,00mm Cristal (R$ 45,00)</option>
                             <option value="1.50mm Colorido" disabled>1,50mm Colorido (R$ 55,00)</option>
                             <option value="1.50mm Cristal" disabled>1,50mm Cristal (R$ 55,00)</option>
                         </select>
